Changed text size to medium. Added attrib to handle changes to orientation and screen size.

--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout 
+<LinearLayout
       xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical">
+   <!-- ???: Make text appearance a setting. -->
    <EditText
       android:id="@+id/input_view"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="5dp"
-      android:textAppearance="?android:attr/textAppearanceLarge"
+      android:textAppearance="?android:attr/textAppearanceMedium"
       android:singleLine="true"
       android:imeOptions="actionDone"
       android:imeActionLabel="@string/enter"
