--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -7,12 +7,13 @@
    android:scrollbars="vertical"
    android:fillViewport="true">
 
+   <!-- ???: Make text appearance a setting. -->
    <TextView
       android:id="@+id/help_view"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:padding="5dp"
-      android:textAppearance="?android:attr/textAppearanceLarge"
+      android:textAppearance="?android:attr/textAppearanceMedium"
       android:layout_weight="1.0"
    />
 </ScrollView>
