--- a/res/layout/row.xml
+++ b/res/layout/row.xml
@@ -1,8 +1,9 @@
+<!-- ???: Make text appearance a setting. -->
 <TextView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
-   android:textAppearance="?android:attr/textAppearanceLarge"
+   android:textAppearance="?android:attr/textAppearanceMedium"
    android:singleLine="true"
 />
