Changed name to Expr. Made delete action clear input field.

--- a/res/layout/row.xml
+++ b/res/layout/row.xml
@@ -4,6 +4,6 @@
    android:id="@+id/row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
-   android:textAppearance="?android:attr/textAppearanceMedium"
-   android:singleLine="true"
+   android:textAppearance="?android:attr/textAppearanceLarge"
+   android:singleLine="false"
 />
